# Serverless-RAG

./: .gitignore  README.md  pyproject.toml
data/: documents.txt
src/: chunker.py  embed.py  embeddings.py  function.py  main.py  metadata_handler.py  pdf_extractor.py  pinecone_uploader.py  pipeline.py  rag.py
src/serverless_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
