
[project]
name = "serverless-rag"
version = "0.1.0"
description = "Serverless RAG with OpenAI and Pinecone"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.3.0",
    "pinecone-client>=3.0.0",
    "python-dotenv>=1.0.0",
    "functions-framework>=3.3.0",
    "pypdf>=4.0.0",
    "langchain>=0.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
